# Iravath_perception_ws

./: .gitignore  README.md  demo.py  install_dependencies.sh  requirements.txt  test.py  validate_package.py
object_dist_find/: mask_rcnn.py
src/iravath_perception/: CMakeLists.txt  MANIFEST.in  README.md  package.xml  setup.py
src/iravath_perception/config/: perception_params.yaml
src/iravath_perception/iravath_perception/: __init__.py
src/iravath_perception/launch/: camera.launch.py  perception.launch.py
src/iravath_perception/legacy_standalone/: test1.py
src/iravath_perception/resource/: iravath_perception
src/iravath_perception/scripts/: object_detection_node.py  realsense_camera_node.py  yolo_detection_node.py
